test/Transforms/TypeVarInference/infer_tvars_fail.llzk
// RUN: llzk-opt -split-input-file -llzk-infer-tvar -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @TConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @conflict(%arg: !poly.tvar<@T>) {
      // expected-note@+1 {{previous inference here}}
      %first = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> !array.type<4 x index>
      // expected-error@+1 {{conflicting inferred type for template parameter @T: '!array.type<4 x index>' vs '!array.type<8 x index>'}}
      %second = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> !array.type<8 x index>
      function.return
    }
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TExplicitParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> !felt.type {
    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    %0 = function.call @TExplicitParamConflict::@id<[!felt.type]>(%arg) : (!felt.type) -> !felt.type
    function.return %0 : !felt.type
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> index {
    // expected-error@+1 {{'function.call' op operand type mismatch: expected type 'index', but found '!felt.type' for operand number 0}}
    %0 = function.call @TConflict::@id(%arg) : (!felt.type) -> index
    function.return %0 : index
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TImplicitSignatureConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> !felt.type {
    // expected-error@+2 {{'function.call' op operand type mismatch: expected type 'index', but found '!felt.type' for operand number 0}}
    // expected-error@+1 {{'function.call' op result type mismatch: expected type 'index', but found '!felt.type' for result number 0}}
    %0 = function.call @TImplicitSignatureConflict::@id(%arg) : (!felt.type) -> !felt.type
    function.return %0 : !felt.type
  }
}
